@@ -1044,7 +1044,7 @@ Plotësoni arsyen specifike më poshtë (p.sh., tregoni faqet specifike që u va
 'ipbreason'             => 'Arsyeja',
 'ipbsubmit'             => 'Blloko këtë përdorues',
 'ipbother'              => 'Kohë tjetër',
-'ipboptions'            => '1 Orë:1 hour,2 Orë:2 hours,6 Orë:6 hours,1 Ditë:1 day,3 Ditë:3 days,1 Javë:1 week,2 Javë:2 weeks,1 Muaj:1 month,3 Muaj:3 months,1 Vjet:1 year,Pa kufi:indefinite',
+'ipboptions'            => '1 Orë:1 hour,2 Orë:2 hours,6 Orë:6 hours,1 Ditë:1 day,3 Ditë:3 days,1 Javë:1 week,2 Javë:2 weeks,1 Muaj:1 month,3 Muaj:3 months,1 Vjet:1 year,Pa kufi:infinite',
 'ipbotheroption'        => 'tjetër',
 'badipaddress'          => 'Nuk ka asnjë përdorues me atë emër',
 'blockipsuccesssub'     => 'Bllokimi u bë me sukses',
